# supersort

./: .gitignore  CHANGELOG.md  Main.hs  Makefile  README.md  bsp-files.conf  bsp-suso.conf  chatgpt.hs  date.jpg.hs  geo.jpg.hs  revert.hs  searchepdf.hs  supersort.cabal  supersort.cabal.save0  test2.conf
Praesentation/: SuperSort.pptx
Präsentation/: SuperSort.pptx
Testdir/: index.php  vier.txt  zwo.txt
Testdir/kgs/: about.html  feedback.html  index.html
Testdir/kgs/dl/: value.json
Testdir/kgs/scripts/: apicalls.js  berechnungen.js  events.js
app/: Main.hs
console_suso/: Commented.hs  Makefile
geo_jpg/: Commented.hs  Main.hs
gui_suso/: HELP  Main.hs  Makefile  default.nix  suso_gui.hs
gui_test_cabal/: gtk.test.hs  gui.cabal
gui_weather/: Main.hs  Makefile
httpget/: Commented.hs  Makefile  default.nix  sendsms copy 2.hs  sendsms copy.hs  sendsms.hs
