cabal-version:      2.4
name:               supersort
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Robert Neumann
maintainer:         contact@rnmail.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable supersort
    main-is:          Main.hs
    data-files: suso.conf
    extra-source-files: suso.conf
    
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, text, containers, filepath, directory
    hs-source-dirs:   app
    default-language: Haskell2010
    
